Bug 155801 - xtermcontrol crashes Konsole in KDE 4.0
Summary: xtermcontrol crashes Konsole in KDE 4.0
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-15 04:27 UTC by Jared Sutton
Modified: 2008-03-19 04:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jared Sutton 2008-01-15 04:27:23 UTC
Version:           2.0 (using KDE KDE 4.0.0)
Installed from:    Ubuntu Packages
OS:                Linux

I use xterm windows for my terminal most of the time.  The reason is that I prefer using small fonts, and I haven't found a way to turn off anti-aliasing in Konsole.  So, I've just gotten used to xterm, and since I prefer a green-on-black color scheme, I use the program xtermcontrol to adjust my xterm settings each time a new shell is launched (by placing the xtermcontrol parameters in ~/.bashrc).

Anyway, as I was testing KDE 4.0 (both the PPA packages listed at kubuntu.org and the "official" Gutsy-backports packages) I found that the program xtermcontrol crashes the new version of Konsole.  This is a regression, as this behavior is not observed in the KDE3 version of Konsole.

Steps to reproduce:
1. Make sure the program "xtermcontrol" is installed (http://www.thrysoee.dk/xtermcontrol/)
2. Launch Konsole 2.0 (the version released with KDE 4.0)
3. Execute the following command in the konsole window "xtermcontrol --fg=green --bg=black"

Here's the output I get when Konsole crashes:

konsole(19783) Konsole::Session::setUserTitle: /build/buildd/kdebase-kde4-4.0.0/apps/konsole/src/Session.cpp 353 : setting background colour to  "black"
ASSERT: "0" in file /build/buildd/kdebase-kde4-4.0.0/apps/konsole/src/Session.cpp, line 363
KCrash: crashing... crashRecursionCounter = 2
KCrash: Application Name = konsole path = <unknown> pid = 19783
sock_file=/home/jasutton/.kde4/socket-Jared/kdeinit4__0
Warning: connect() failed: : No such file or directory
KCrash cannot reach kdeinit, launching directly.

After reviewing apps/konsole/src/Session.cpp (in websvn), it appears that some code hasn't been written yet, as there's a comment to that effect in the code, so this appears to be an intentional crash (an explicit "Q_ASSERT(0)").

I wasn't sure if this should be reported in light of the source comments, but if it shouldn't feel free to close this bug report. :)
Comment 1 Robert Knight 2008-01-15 14:46:45 UTC
> I wasn't sure if this should be reported in light of the source comments

Thanks for the report.  A crash is always a bug, whatever the source might say.
Comment 2 Robert Knight 2008-03-19 04:05:00 UTC
SVN commit 787355 by knight:

Add support for setting background and foreground colors of a session's displays
using the Xterm Operating System Controls escape sequences.

See the "Operating System Controls" section on this page:
http://rtfm.etla.org/xterm/ctlseq.html

Other colors and multiple color sequences are not supported.

xtermcontrol --fg=<color> --bg=<color> now work as expected.

In addition to standard color names ("green","blue","red") etc, Qt
also accepts SVG color names:

http://www.w3.org/TR/SVG/types.html#ColorKeywords

BUG: 155801


 M  +12 -20    Session.cpp  
 M  +24 -1     Session.h  
 M  +5 -1      SessionController.cpp  
 M  +18 -8     TerminalDisplay.cpp  
 M  +12 -0     TerminalDisplay.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=787355