Add support for setting background and foreground colors of a session's displays using the Xterm Operating System Controls escape sequences.

See the "Operating System Controls" section on this page:
http://rtfm.etla.org/xterm/ctlseq.html

Other colors and multiple color sequences are not supported.

xtermcontrol --fg=<color> --bg=<color> now work as expected.

In addition to standard color names ("green","blue","red") etc, Qt
also accepts SVG color names:

http://www.w3.org/TR/SVG/types.html#ColorKeywords

BUG: 155801

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=787355