src/TerminalDisplay.cpp
@@ -119,20 +119,30 @@ const ColorEntry* TerminalDisplay::colorTable() const
 {
   return _colorTable;
 }
+void TerminalDisplay::setBackgroundColor(const QColor& color)
+{
+	_colorTable[DEFAULT_BACK_COLOR].color = color;
+	QPalette p = palette();
+  	p.setColor( backgroundRole(), color ); 
+  	setPalette( p );
 
+  	// Avoid propagating the palette change to the scroll bar 
+  	_scrollBar->setPalette( QApplication::palette() );  
+
+	update();
+}
+void TerminalDisplay::setForegroundColor(const QColor& color)
+{
+	_colorTable[DEFAULT_FORE_COLOR].color = color;
+
+	update();
+}
 void TerminalDisplay::setColorTable(const ColorEntry table[])
 {
   for (int i = 0; i < TABLE_COLORS; i++)
       _colorTable[i] = table[i];
 
-  QPalette p = palette();
-  p.setColor( backgroundRole(), _colorTable[DEFAULT_BACK_COLOR].color );
-  setPalette( p );
-
-  // Avoid propagating the palette change to the scroll bar 
-  _scrollBar->setPalette( QApplication::palette() );  
-
-  update();
+  setBackgroundColor(_colorTable[DEFAULT_BACK_COLOR].color);
 }
 
 /* ------------------------------------------------------------------------- */
